bk_ida/gccida/g2/init_emit_once
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/init_emit_once/src/emit-rtl.c:5421:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v4; // r9d 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/init_emit_once/src/emit-rtl.c:5423:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v6; // esi 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/init_emit_once/src/emit-rtl.c:5426:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v9; // eax 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/init_emit_once/src/emit-rtl.c:5427:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v10; // r12d 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/init_emit_once/src/emit-rtl.c:5429:1: error: must use 'enum' tag to refer to type 'mode_class'
mode_class v12; // esi 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/init_emit_once/src/machmode.h:52:30: note: enum 'mode_class' is hidden by a non-type declaration of 'mode_class' here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/init_emit_once/src/emit-rtl.c:5444:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode i; // r14d 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/init_emit_once/src/emit-rtl.c:5449:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v32; // r14d 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/init_emit_once/src/emit-rtl.c:5452:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode j; // r14d 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/init_emit_once/src/emit-rtl.c:5463:1: error: must use 'union' tag to refer to type 'real_extract'
real_extract u; // [rsp+30h] [rbp-58h] BYREF 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/init_emit_once/src/emit-rtl.c:5472:12: error: invalid suffix 'xmode' on integer constant
*(short *)0xmode = VOIDmode; 
           ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/init_emit_once/src/emit-rtl.c:5508:12: error: invalid suffix 'xmode' on integer constant
*(short *)0xmode = v4; 
           ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/init_emit_once/src/emit-rtl.c:5529:7: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
v12 = mode_class_0[5]; 
      ^~~~~~~~~~~~
      mode_class
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/init_emit_once/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/init_emit_once/src/emit-rtl.c:5534:7: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
v12 = mode_class_0[4]; 
      ^~~~~~~~~~~~
      mode_class
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/init_emit_once/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/init_emit_once/src/emit-rtl.c:5540:30: error: use of undeclared identifier 'machine_mode'
v14 = gen_rtx_fmt_i0( REG, ( machine_mode)( ( ( BYTE3( target_flags) & 2) != 0) + 4), 7); 
                             ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/init_emit_once/src/emit-rtl.c:5544:30: error: use of undeclared identifier 'machine_mode'
v15 = gen_rtx_fmt_i0( REG, ( machine_mode)( !v8 + 4), 20); 
                             ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/init_emit_once/src/emit-rtl.c:5549:30: error: use of undeclared identifier 'machine_mode'
v43 = gen_rtx_fmt_i0( REG, ( machine_mode)( ( ( BYTE3( target_flags) & 2) != 0) + 4), 6); 
                             ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/init_emit_once/src/emit-rtl.c:5555:30: error: use of undeclared identifier 'machine_mode'
v42 = gen_rtx_fmt_i0( REG, ( machine_mode)( ( ( BYTE3( target_flags) & 2) != 0) + 4), 16); 
                             ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/init_emit_once/src/emit-rtl.c:5560:30: error: use of undeclared identifier 'machine_mode'
v17 = gen_rtx_fmt_i0( REG, ( machine_mode)( ( ( BYTE3( target_flags) & 2) != 0) + 4), 53); 
                             ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/init_emit_once/src/emit-rtl.c:5564:30: error: use of undeclared identifier 'machine_mode'
v18 = gen_rtx_fmt_i0( REG, ( machine_mode)( !v8 + 4), 54); 
                             ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/init_emit_once/src/obj/emit-rtl.o] Error 1
